@@ -268,6 +268,9 @@ export(td)
 export(tolong)
 export(tolong_2)
 export(towide)
+export(tpg)
+export(tps)
+export(tps_)
 export(tr)
 export(tran)
 export(up)
