@@ -42,6 +42,8 @@ waldx(
   overdispersion = FALSE,
   df = NULL,
   pars = NULL,
+  robust = FALSE,
+  type = "hc0",
   ...
 )
 
@@ -114,6 +116,11 @@ by \code{\link{overdisp_fun}}. If `overdisperion` is numerical, use
 its value as an overdispersion factor.}
 
 \item{pars}{passed to \code{\link[rstan]{extract}} method for stanfit objects.}
+
+\item{robust}{(default FALSE) use Huber-White corrected covariance matrix}
+
+\item{type}{(default 'hc0') type of Huber-White correction to use. See 
+\code{\link[car]{hccm}}.}
 
 \item{include}{passed to \code{\link[rstan]{extract}} method for stanfit objects.}
 
